# app/Http/Controllers/ProductController.php
@@ -5,7 +5,11 @@ namespace App\Http\Controllers;
 use App\Models\Category;
 use App\Models\Product;
 use Illuminate\Http\Request;
+use Illuminate\Auth\Events\Validated;
 use Symfony\Component\HttpFoundation\Response;
+use Illuminate\Support\Facades\Validator;
+
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 
 /**
  * @OA\Schema(
@@ -164,29 +168,11 @@ class ProductController extends Controller
      * @OA\Get(
      *   path="/api/products",
      *   tags={"Products"},
-     *   summary="查找所有商品列表",
-     *   @OA\Response(
-     *          response="200",
-     *          description="請求成功",
-     *          @OA\JsonContent(ref="#/components/schemas/products")
-     *          )
-     * )
-     */
-    public function indexAll()
-    {
-        return Product::with(['images', 'category'])->get();
-    }
-
-    /**
-     * @OA\Get(
-     *   path="/api/products/{category_name}",
-     *   tags={"Products"},
-     *   summary="根據分類名稱，查找商品列表",
+     *   summary="商品列表",
      *   @OA\Parameter(
-     *          name="category_name",
+     *          name="category",
      *          description="分類名稱",
-     *          required=true,
-     *          in="path",
+     *          in="query",
      *          @OA\Schema(
      *              type="string",
      *              default="上衣"
@@ -205,65 +191,71 @@ class ProductController extends Controller
      *              )
      * )
      */
-    public function index(String $category_name)
+    public function index(Request $request)
     {
-        if (Category::whereName($category_name)->doesntExist()) {
-            return response(
-                ['message' => 'category name error'],
-                Response::HTTP_UNPROCESSABLE_ENTITY
-            );
+        // with category
+        if ($request->has('category')) {
+            $enum_category = join(',', array_map(fn ($row) => $row['name'], Category::all('name')->toArray()));
+            $validater = Validator::make($request->all(), [
+                'category' => "in:$enum_category"
+            ]);
+
+            if ($validater->fails()) {
+                return response(
+                    ['message' => 'category name error'],
+                    Response::HTTP_UNPROCESSABLE_ENTITY
+                );
+            }
+
+            return Product::with(['images', 'category'])
+                            ->whereHas('category', function ($q) use ($request) {
+                                $q->where('name', $request->category);
+                            })->get();
         }
 
-        return Product::with(['images', 'category'])
-                        ->whereHas('category', function ($q) use ($category_name) {
-                            $q->where('name', $category_name);
-                        })->get();
+        // without categoy
+        return Product::with(['images', 'category'])->get();
+
     }
 
     /**
      * @OA\Get(
-     *   path="/api/products/{category_name}/{product_id}",
-     *   tags={"Products"},
-     *   summary="根據分類名稱和商品id，查找指定商品",
-     *   @OA\Parameter(
-     *          name="category_name",
-     *          description="分類名稱",
-     *          required=true,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="string",
-     *              default="上衣"
-     *          )
-     *   ),
-     *   @OA\Parameter(
-     *          name="product_id",
-     *          description="商品id",
-     *          required=true,
-     *          in="path",
-     *          @OA\Schema(
-     *              type="integer",
-     *              default=2
-     *          )
-     *   ),
-     *   @OA\Response(
-     *          response="200",
-     *          description="請求成功",
-     *          @OA\JsonContent(ref="#/components/schemas/productsWithInventories")
+     *      path="/api/products/{product_id}",
+     *      tags={"Products"},
+     *      summary="根據商品id，查找指定商品",
+     *      @OA\Parameter(
+     *             name="product_id",
+     *             description="商品id",
+     *             required=true,
+     *             in="path",
+     *             @OA\Schema(
+     *                 type="integer",
+     *                 default=2
+     *             )
+     *      ),
+     *      @OA\Response(
+     *             response="200",
+     *             description="請求成功",
+     *             @OA\JsonContent(ref="#/components/schemas/productsWithInventories")
+     *             ),
+     *      @OA\Response(
+     *          response="422",
+     *          description="商品id有誤",
+     *          @OA\JsonContent(example={"message": "product id does not exists"})
      *          ),
-     *   @OA\Response(response="422",
-     *                description="分類名稱有誤",
-     *                @OA\JsonContent(
-     *                      example={"message": "category name error"}
-     *                )
-     *              )
      * )
      */
-    public function show(String $category_name, Product $product)
+    public function show(Request $request)
     {
-        if ($product->category->name !== $category_name) {
-            return response(['message' => 'category name error'], Response::HTTP_UNPROCESSABLE_ENTITY);
+        try {
+            $product = Product::findOrFail($request->product);
+            return $product->fresh(['images', 'category', 'inventories']);
+        } catch (ModelNotFoundException $e) {
+            return response(
+                ['message' => 'product id does not exists'],
+                Response::HTTP_UNPROCESSABLE_ENTITY
+            );
         }
-        return $product->fresh(['images', 'category', 'inventories']);
     }
 
     /**
@@ -280,6 +272,6 @@ class ProductController extends Controller
     */
     public function recommend()
     {
-        return Product::all()->random(5);
+        return Product::with(['images', 'category'])->inRandomOrder()->limit(5)->get();
     }
 }
